Bug 57886 - Text entered in documentation window is not saved for diagrams
Summary: Text entered in documentation window is not saved for diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.1.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Andi Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-04-30 09:52 UTC by Stevan White
Modified: 2013-11-10 19:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments
Documentations are now saved as needed (2.08 KB, patch)
2006-06-16 15:20 UTC, Gaël de Chalendar (aka Kleag)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stevan White 2003-04-30 09:52:28 UTC
Version:           1.1.1 (using KDE KDE 3.1.1)
Compiler:          Sun Java2 SDK 1.4.1 
OS:          Linux

Make two diagrams in a project.

Click in the pane of one of the diagrams.

In the Documentation pane, type something.

Now go to the other diagram.  Click in its pane.
    --> will see the same documentation.

Documentation typed in this way, one would expect to be associated with the diagram, not with every diagram in the whole project.
Comment 1 Sebastian Stein 2003-08-12 21:06:45 UTC
Subject: Re: Setting documentation for diagram sets it for whole project

Thank you for your bug report.
This bug can not be reproduced using the current development (CVS)
version of KDE. This suggests that the bug has already been fixed.
The bug report will be closed.

Comment 2 Stevan White 2004-06-13 14:24:54 UTC
no longer occurs in 1.2.1
Comment 3 Gaël de Chalendar (aka Kleag) 2006-06-13 18:43:49 UTC
Occurs again in 1.5.3... Also, this documentation is saved in the xmi as:
 <XMI.extensions xmi.extender="umbrello" >
  <docsettings viewid="25349" documentation=" aze dfsb" uniqueid="29359" />
  <diagrams>

where viewid is the id of the last diagram where the documentation was edited. The documentation should be saved in the documentation attribute of the diagram tag, shouldn't it ?
Comment 4 Gaël de Chalendar (aka Kleag) 2006-06-15 18:06:32 UTC
Note that the documentation of the diagram entered through the diagram properties dialog is OK. But it is not displayed in the documention docked window.
I will try to correct that in the 3.5 SVN tree and to propose the patch.
Comment 5 Oliver Kellogg 2006-06-15 20:36:57 UTC
I confirm that the doc is not saved when typing directly into the
documentation area. I.e. when exiting and reopening the diagram the
documentation entered this way is not there.
Comment 6 Gaël de Chalendar (aka Kleag) 2006-06-16 15:20:52 UTC
Created attachment 16641 [details]
Documentations are now saved as needed

I'm not very happy by this patch. Adding a member for that seems too much. I
wanted to use the accepted flag of the event, but this one surprisingly
defaults to true instead of false. Thus child widgets cannot say they have used
the event. Or I misunderstand somthing...
Comment 7 Frank-Christian Otto 2006-09-21 15:10:52 UTC
The bug is still there (at least in version 1.5.2 -- but not in all places).
When opening the context menu of an entity in a class or deployment diagram
the text is saved.
But when doing the same thing on an entity of a ER diagram the text is never saved :-(
Comment 8 Oliver Kellogg 2006-09-22 20:36:05 UTC
> But when doing the same thing on an entity of a ER diagram the text is
> never saved

On branches/KDE/3.5/kdesdk/umbrello (r587279), it's the class diagram doc
that is missing - all others seem to be okay.
Comment 9 Andi Fischer 2013-09-28 22:08:31 UTC
Git commit 38d280f93c0750d5d4d0cd0e49cdf8dc84d09f01 by Andi Fischer.
Committed on 28/09/2013 at 22:05.
Pushed by fischer into branch 'master'.

Documentation info label added to DocWindow. It shows type, name and
flag whether documentation is modified.
Removed unnecessary includes of docwindow.h to reduce dependency

M  +0    -1    umbrello/codeimport/cppimport.cpp
M  +164  -52   umbrello/docwindow.cpp
M  +16   -12   umbrello/docwindow.h
M  +2    -0    umbrello/icon_utils.cpp
M  +1    -0    umbrello/icon_utils.h
M  +1    -1    umbrello/uml.cpp
M  +2    -2    umbrello/umldoc.cpp
M  +0    -1    umbrello/widgets/combinedfragmentwidget.cpp
M  +0    -1    umbrello/widgets/signalwidget.cpp

http://commits.kde.org/umbrello/38d280f93c0750d5d4d0cd0e49cdf8dc84d09f01
Comment 10 Oliver Kellogg 2013-09-29 06:00:28 UTC
On 2013-09-29 00:08:31 +0200, Andi Fischer wrote:
> 
> https://bugs.kde.org/show_bug.cgi?id=57886
> 
> Andi Fischer <andi.fischer@hispeed.ch> changed:
> 
> What    |Removed                     |Added
> ----------------------------------------------------------------------------
> Status|CONFIRMED                   |RESOLVED
> Resolution|---                         |FIXED
> Latest Commit|                            |http://commits.kde.org/umbr
> |                            |ello/38d280f93c0750d5d4d0cd
> |                            |0e49cdf8dc84d09f01
> 
> --- Comment #9 from Andi Fischer <andi.fischer@hispeed.ch> ---
> Git commit 38d280f93c0750d5d4d0cd0e49cdf8dc84d09f01 by Andi Fischer.
> Committed on 28/09/2013 at 22:05.
> Pushed by fischer into branch 'master'.
> 
> Documentation info label added to DocWindow. It shows type, name and
> flag whether documentation is modified.
> Removed unnecessary includes of docwindow.h to reduce dependency 
> M  +0    -1    umbrello/codeimport/cppimport.cpp
> M  +164  -52   umbrello/docwindow.cpp
> M  +16   -12   umbrello/docwindow.h
> M  +2    -0    umbrello/icon_utils.cpp
> M  +1    -0    umbrello/icon_utils.h
> M  +1    -1    umbrello/uml.cpp
> M  +2    -2    umbrello/umldoc.cpp
> M  +0    -1    umbrello/widgets/combinedfragmentwidget.cpp
> M  +0    -1    umbrello/widgets/signalwidget.cpp
> 
> http://commits.kde.org/umbrello/38d280f93c0750d5d4d0cd0e49cdf8dc84d09f01
> 

Very cool Andi!

++like

-- Oliver