Documentation info label added to DocWindow. It shows type, name and flag whether documentation is modified. Removed unnecessary includes of docwindow.h to reduce dependency

BUG: 57886