umbrello/icon_utils.h
@@ -215,6 +215,7 @@ namespace Icon_Utils {
         it_Align_HorizontalDistribute,
         it_Code_Gen_Wizard,
         it_Properties_AutoLayout,
+        it_Document_Edit,
         N_ICONTYPES    // must remain last
     };
 
